--- a/src/scss/block/dataView.scss
+++ b/src/scss/block/dataView.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
-	.blockDb {
+	.blockDataView {
 		.icon.plus { width: 12px; height: 12px; background-image: url('~img/icon/block/db/plus/light0.svg'); cursor: pointer; }
 		.icon.plus:hover { background-image: url('~img/icon/block/db/plus/dark1.svg'); }
 		.icon.plus.dark { background-image: url('~img/icon/block/db/plus/dark0.svg'); }
