text block mark rendering, keyboard handlers

--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -3,10 +3,10 @@
 .blocks {
 	.blockText {
 		.p {  }
-		.h1 { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; }
-		.h2 { font-size: 21px; line-height: 28px; letter-spacing: -0.16px; }
-		.h3 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; }
-		.h4 {  }
+		.h1 { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; }
+		.h2 { font-size: 21px; line-height: 28px; letter-spacing: -0.16px; font-weight: 600; }
+		.h3 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; font-weight: 600; }
+		.h4 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; }
 		.quote { font-size: 13px; line-height: 22px; letter-spacing: 0.08px; }
 	}	
 }
