--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -4,18 +4,18 @@
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 20; background: rgba(0,0,0,0); }
 	.menu { 
 		border-radius: 4px; color: #fff; position: absolute; z-index: 21; text-align: left; padding: 4px; 
-		box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3); background: $colorBlack; opacity: 0; transform: scale3d(0.8,0.8,1);
+		box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: $colorBlack; opacity: 0; transform: scale3d(0.8,0.8,1);
 		transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out; 
 	}
 	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
 	
 	.menu.v1.h3 { transform-origin: 0% 100%; } /* top left */
 	.menu.v2.h3 { transform-origin: 0% 0%; } /* bottom left */
-	.menu.v1.h4 { transform-origin: 100% 0%; } /* top right */
-	.menu.v2.h4 { transform-origin: 100% 100%; } /* bottom right */
+	.menu.v1.h4 { transform-origin: 100% 100%; } /* top right */
+	.menu.v2.h4 { transform-origin: 100% 0%; } /* bottom right */
 	
 	.menu {
-		.content { opacity: 0; transition-delay: 0.05s; transition: opacity 0.2s ease-in-out; }
+		.content { background: inherit; opacity: 0; transition: opacity 0.2s ease-in-out; transition-delay: 0.1s; }
 	}
 	.menu.show {
 		.content { opacity: 1; }
@@ -28,9 +28,9 @@
 		.items { background: inherit; }
 		.item { 
 			padding: 6px 8px; font-size: 15px; letter-spacing: 0.2px; border-radius: 4px; position: relative; cursor: pointer; 
-			transition: background 0.2s ease-in-out; width: 100%; background: inherit;
+			transition: all 0.15s ease-in-out; width: 100%; background: inherit;
 		}
-		.item.dragging { box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3); }
+		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item:hover { background: #56554f; }
 		.item.active { background: $colorBlack; }
 		
