--- a/src/scss/menu/view.scss
+++ b/src/scss/menu/view.scss
@@ -4,9 +4,8 @@
 	.menu.menuView { width: 176px; background: #fff; color: $colorBlack; overflow: hidden; }
 	.menu.menuView {
 		.item {
-			.icon.view.c0 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/button/view/grid0.svg'); }
+			.icon.view { width: 14px; height: 12px; }
 		}
-		
 		.item:hover, .item.active { background: #f7f5f0; }
 	}	
 }
