--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -7,12 +7,6 @@
 		.icon.plus.dark { background-image: url('~img/icon/block/dataview/plus/dark0.svg'); }
 		.icon.plus.dark:hover { background-image: url('~img/icon/block/dataview/plus/dark1.svg'); }
 		
-		.icon.property.c0 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/0.svg'); }
-		.icon.property.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/property/1.svg'); }
-		.icon.property.c2 { width: 15px; height: 14px; background-image: url('~img/icon/block/dataview/property/2.svg'); }
-		
-		.icon.view.c0 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/button/view/grid0.svg'); }
-			
 		.views { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; color: #aca996; font-weight: bold; margin-bottom: 16px; }
 		.views {
 			.item { margin-right: 20px; display: inline-block; vertical-align: middle; transition: $transitionFast; cursor: pointer; }
@@ -52,6 +46,9 @@
 				.icon.more { background-image: url('~img/icon/block/dataview/button/more1.svg'); }
 				
 				.icon.view.c0 { background-image: url('~img/icon/block/dataview/button/view/grid1.svg'); }
+				.icon.view.c1 { background-image: url('~img/icon/block/dataview/button/view/board1.svg'); }
+				.icon.view.c2 { background-image: url('~img/icon/block/dataview/button/view/gallery1.svg'); }
+				.icon.view.c3 { background-image: url('~img/icon/block/dataview/button/view/list1.svg'); }
 			}
 		}
 		
