dataview controls refactoring

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -52,23 +52,25 @@
 			}
 		}
 		
-		.viewGrid { 
-			border-collapse: collapse; min-width: 100%; border-top: 1px solid #e0ded2; border-bottom: 1px solid #e0ded2; 
-		}
-		.viewGrid {
-			.cellHead { 
-				text-align: left; font-size: 13px; line-height: 18px; letter-spacing: 0.08px; color: #aca996; font-weight: 400;
-				padding: 10px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2;
-			}
-			.cellHead:last-child { border-right: 0px; }
-			.cellHead {
-				.icon { margin-right: 5px; }
-			}
+		.content {
+			.view { border-top: 1px solid #e0ded2; }
 			
-			.cellBody { 
-				padding: 6px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2; font-size: 13px; line-height: 18px; 
+			.viewGrid { border-collapse: collapse; min-width: 100%; border-bottom: 1px solid #e0ded2; }
+			.viewGrid {
+				.cellHead { 
+					text-align: left; font-size: 13px; line-height: 18px; letter-spacing: 0.08px; color: #aca996; font-weight: 400;
+					padding: 7px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2;
+				}
+				.cellHead:last-child { border-right: 0px; }
+				.cellHead {
+					.icon { margin-right: 5px; }
+				}
+				
+				.cellBody { 
+					padding: 6px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2; font-size: 13px; line-height: 18px; 
+				}
+				.cellBody:last-child { border-right: 0px; }
 			}
-			.cellBody:last-child { border-right: 0px; }
 		}
 	}	
 }
