--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -14,6 +14,7 @@
 .icon.property.c0 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/0.svg'); }
 .icon.property.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/property/1.svg'); }
 .icon.property.c2 { width: 15px; height: 14px; background-image: url('~img/icon/block/dataview/property/2.svg'); }
+.icon.property.c3 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/3.svg'); }
 		
 .icon.view.c0 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/button/view/grid0.svg'); }
 .icon.view.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/button/view/board0.svg'); }
