--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -2,6 +2,7 @@
 
 .menus {
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 20; background: rgba(0,0,0,0); }
+	
 	.menu { 
 		border-radius: 4px; color: #fff; position: absolute; z-index: 21; text-align: left; padding: 4px; 
 		box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: $colorBlack; opacity: 0; transform: scale3d(0.8,0.8,1);
@@ -13,6 +14,11 @@
 	.menu.v2.h3 { transform-origin: 0% 0%; } /* bottom left */
 	.menu.v1.h4 { transform-origin: 100% 100%; } /* top right */
 	.menu.v2.h4 { transform-origin: 100% 0%; } /* bottom right */
+	
+	.menu.light { background: #fff; color: $colorBlack; }
+	.menu.light {
+		.item:hover, .item.active { background: #f7f5f0 !important; }
+	}
 	
 	.menu {
 		.content { background: inherit; opacity: 0; transition: opacity 0.15s ease-in-out; transition-delay: 0.1s; }
@@ -34,7 +40,7 @@
 		.item:hover { background: #56554f; }
 		.item.active { background: $colorBlack; }
 		
-		.icon { width: 24px; height: 24px; margin-right: 8px; }
+		.icon { margin-right: 8px; }
 		.name { display: inline-block; vertical-align: middle; }
 	}
 	
