dataview property, sort, view menu

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -70,7 +70,7 @@
 				}
 				.head:last-child { border-right: 0px; }
 				.head {
-					.icon { margin-right: 5px; }
+					.icon { margin: -2px 5px 0px 0px; }
 				}
 				
 				td.cell { padding: 6px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2; }
