--- a/src/scss/component/switch.scss
+++ b/src/scss/component/switch.scss
@@ -11,6 +11,8 @@
 	}	
 }
 .switch.active { background: #6c6a5f; }
+.switch.green.active { background: $colorGreen; }
+
 .switch.active {
 	.inner { left: auto; right: 2px; }
 }
