--- a/src/scss/menu/help.scss
+++ b/src/scss/menu/help.scss
@@ -1,6 +1,7 @@
 @import "~scss/_vars";
 
 .menus {
+	.menu.menuHelp { width: 224px; }
 	.menu.menuHelp {
 		.icon { width: 24px; height: 24px; }
 	}	
