--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -11,10 +11,31 @@
 .icon.help.light { background-image: url('~img/icon/help/light0.svg'); }
 .icon.help.light:hover, .icon.help.light.active { background-image: url('~img/icon/help/light1.svg'); }
 
-.icon.property.c0 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/0.svg'); }
-.icon.property.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/property/1.svg'); }
-.icon.property.c2 { width: 15px; height: 14px; background-image: url('~img/icon/block/dataview/property/2.svg'); }
-.icon.property.c3 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/3.svg'); }
+.icon.property.c0 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/light/title.svg'); }
+.icon.property.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/property/light/text.svg'); }
+.icon.property.c2 { width: 15px; height: 14px; background-image: url('~img/icon/block/dataview/property/light/number.svg'); }
+.icon.property.c3 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/light/date.svg'); }
+.icon.property.c4 { width: 16px; height: 16px; background-image: url('~img/icon/block/dataview/property/light/select.svg'); }
+.icon.property.c5 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/property/light/multiple.svg'); }
+.icon.property.c6 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/light/account.svg'); }
+.icon.property.c7 { width: 11px; height: 18px; background-image: url('~img/icon/block/dataview/property/light/file.svg'); }
+.icon.property.c8 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/light/bool.svg'); }
+.icon.property.c9 { width: 16px; height: 16px; background-image: url('~img/icon/block/dataview/property/light/link.svg'); }
+.icon.property.c10 { width: 16px; height: 12px; background-image: url('~img/icon/block/dataview/property/light/email.svg'); }
+.icon.property.c11 { width: 16px; height: 16px; background-image: url('~img/icon/block/dataview/property/light/phone.svg'); }
+
+.icon.property.dark.c0 { background-image: url('~img/icon/block/dataview/property/dark/title.svg'); }
+.icon.property.dark.c1 { background-image: url('~img/icon/block/dataview/property/dark/text.svg'); }
+.icon.property.dark.c2 { background-image: url('~img/icon/block/dataview/property/dark/number.svg'); }
+.icon.property.dark.c3 { background-image: url('~img/icon/block/dataview/property/dark/date.svg'); }
+.icon.property.dark.c4 { background-image: url('~img/icon/block/dataview/property/dark/select.svg'); }
+.icon.property.dark.c5 { background-image: url('~img/icon/block/dataview/property/dark/multiple.svg'); }
+.icon.property.dark.c6 { background-image: url('~img/icon/block/dataview/property/dark/account.svg'); }
+.icon.property.dark.c7 { background-image: url('~img/icon/block/dataview/property/dark/file.svg'); }
+.icon.property.dark.c8 { background-image: url('~img/icon/block/dataview/property/dark/bool.svg'); }
+.icon.property.dark.c9 { background-image: url('~img/icon/block/dataview/property/dark/link.svg'); }
+.icon.property.dark.c10 { background-image: url('~img/icon/block/dataview/property/dark/email.svg'); }
+.icon.property.dark.c11 { background-image: url('~img/icon/block/dataview/property/dark/phone.svg'); }
 		
 .icon.view.c0 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/button/view/grid0.svg'); }
 .icon.view.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/button/view/board0.svg'); }
