--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -4,7 +4,7 @@
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 20; background: rgba(0,0,0,0); }
 	
 	.menu { 
-		border-radius: 4px; color: #fff; position: absolute; z-index: 21; text-align: left; padding: 4px; 
+		border-radius: 4px; color: #fff; position: absolute; z-index: 21; text-align: left; padding: 4px;
 		box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: $colorBlack; opacity: 0; transform: scale3d(0.8,0.8,1);
 		transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out; 
 	}
@@ -15,13 +15,8 @@
 	.menu.v1.h4 { transform-origin: 100% 100%; } /* top right */
 	.menu.v2.h4 { transform-origin: 100% 0%; } /* bottom right */
 	
-	.menu.light { background: #fff; color: $colorBlack; }
-	.menu.light {
-		.item:hover, .item.active { background: #f7f5f0 !important; }
-	}
-	
 	.menu {
-		.content { background: inherit; opacity: 0; transition: opacity 0.15s ease-in-out; transition-delay: 0.1s; }
+		.content { opacity: 0; transition: opacity 0.15s ease-in-out; transition-delay: 0.1s; }
 	}
 	.menu.show {
 		.content { opacity: 1; }
@@ -29,19 +24,35 @@
 	
 	.menu.vertical { width: 176px; }
 	.menu.vertical {
-		.title { font-size: 13px; line-height: 22px; margin: 0px; padding: 6px 8px; font-weight: 500; }
+		.title { 
+			font-size: 13px; line-height: 18px; margin: 0px; padding: 7px 16px; font-weight: 400; color: #aca996;
+			letter-spacing: 0.08px; 
+		}
 	
-		.items { background: inherit; }
 		.item { 
 			padding: 6px 8px; font-size: 15px; letter-spacing: 0.2px; border-radius: 4px; position: relative; cursor: pointer; 
-			transition: all 0.15s ease-in-out; width: 100%; background: inherit;
+			transition: all 0.15s ease-in-out; width: 100%;
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item:hover { background: #56554f; }
 		.item.active { background: $colorBlack; }
 		
 		.icon { margin-right: 8px; }
+		.icon.dnd { width: 7px; height: 12px; background-image: url('~img/icon/dnd.svg'); margin-right: 10px; }
+		.icon.delete { 
+			width: 18px; height: 18px; background-size: 10px 10px; background-image: url('~img/icon/menu/delete0.svg'); cursor: pointer;
+			position: absolute; right: 12px; top: 50%; margin: -9px 0px 0px 0px;
+		}
+		.icon.delete:hover { background-image: url('~img/icon/menu/delete1.svg');  }
+		
 		.name { display: inline-block; vertical-align: middle; }
+	}
+	
+	.menu.light { padding: 8px 0px; background: #fff; color: $colorBlack; border-radius: 8px; }
+	.menu.light {
+		.item { padding: 7px 16px; font-size: 13px !important; line-height: 18px; border-radius: 0px; }
+		.item.dragging { background: #fff; }
+		.item:hover, .item.active { background: #f7f5f0 !important; }
 	}
 	
 	.icon.chat { background-size: 18px 20px; background-image: url('~img/icon/menu/help/chat0.svg'); }
@@ -53,8 +64,6 @@
 		.icon.feature { background-image: url('~img/icon/menu/help/feature1.svg'); }
 		.icon.community { background-image: url('~img/icon/menu/help/community1.svg'); }
 	}
-	
-	.menu.menuHelp { width: 224px; }
 }
 
 .menuMain {
