--- a/src/scss/component/select.scss
+++ b/src/scss/component/select.scss
@@ -9,16 +9,16 @@
 .select {
 	.icon { transition: none; }
 	.icon.arrow { 
-		margin: -3px 0px 0px 0px !important; right: 8px; width: 10px !important; height: 6px !important; position: absolute; top: 50%;
+		margin: -3px 0px 0px 0px !important; right: 10px; width: 10px !important; height: 6px !important; position: absolute; top: 50%;
 		background-image: url('~img/icon/select.svg'); 
 	}
 	.current { padding: 4px 26px 4px 8px; }
 	.options { 
-		min-width: 176px; border-radius: 4px; box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: #fff; position: absolute;
-		left: 0px; top: 28px; z-index: 1; padding: 4px; display: none;
+		min-width: 176px; border-radius: 8px; box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: #fff; position: absolute;
+		left: 0px; top: 28px; z-index: 1; display: none; padding: 8px 0px;
 	}
 	.options {
-		.option { cursor: pointer; padding: 6px 8px; border-radius: 4px; }
+		.option { cursor: pointer; padding: 5px 16px; }
 		.option {
 			.name { width: auto; }
 			.icon { margin: 0px 4px 0px 0px; transition: none; }
