--- a/src/scss/menu/property.scss
+++ b/src/scss/menu/property.scss
@@ -1,9 +1,13 @@
 @import "~scss/_vars";
 
 .menus {
+	.menu.menuPropertyList { width: 224px; }
 	.menu.menuPropertyList {
 		.item {
-			.switch { position: absolute; right: 6px; top: 50%; margin-top: -8px; }
+			.icon.property { width: 16px; }
+			.icon.plus { width: 12px; height: 12px; background-image: url('~img/icon/block/dataview/plus/light0.svg'); }
+			.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
 		}
-	}	
+		.item.add { color: #aca996; }
+	}
 }
