menu property add/edit + menu animation refactoring

--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -12,8 +12,12 @@
 	
 	.menu.v1.h3 { transform-origin: 0% 100%; } /* top left */
 	.menu.v2.h3 { transform-origin: 0% 0%; } /* bottom left */
+	
 	.menu.v1.h4 { transform-origin: 100% 100%; } /* top right */
 	.menu.v2.h4 { transform-origin: 100% 0%; } /* bottom right */
+	
+	.menu.v1.h5 { transform-origin: 50% 100%; } /* top center */
+	.menu.v2.h5 { transform-origin: 50% 0%; } /* bottom center */
 	
 	.menu {
 		.content { opacity: 0; transition: opacity 0.15s ease-in-out; transition-delay: 0.1s; }
@@ -44,6 +48,8 @@
 			position: absolute; right: 12px; top: 50%; margin: -9px 0px 0px 0px;
 		}
 		.icon.delete:hover { background-image: url('~img/icon/menu/delete1.svg');  }
+		.icon.copy { width: 16px; height: 16px; background-image: url('~img/icon/menu/copy.svg'); }
+		.icon.trash { width: 16px; height: 16px; background-image: url('~img/icon/menu/trash.svg'); }
 		
 		.name { display: inline-block; vertical-align: middle; }
 	}
