--- a/src/scss/component/menu.scss
+++ b/src/scss/component/menu.scss
@@ -10,14 +10,17 @@
 	}
 	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
 	
-	.menu.v1.h3 { transform-origin: 0% 100%; } /* top left */
-	.menu.v2.h3 { transform-origin: 0% 0%; } /* bottom left */
+	.menu.v1.h3 { transform-origin: 0% 100%; } /* left top */
+	.menu.v2.h3 { transform-origin: 0% 0%; } /* left bottom */
 	
-	.menu.v1.h4 { transform-origin: 100% 100%; } /* top right */
-	.menu.v2.h4 { transform-origin: 100% 0%; } /* bottom right */
+	.menu.v1.h4 { transform-origin: 100% 100%; } /* right top */
+	.menu.v2.h4 { transform-origin: 100% 0%; } /* right bottom */
 	
-	.menu.v1.h5 { transform-origin: 50% 100%; } /* top center */
-	.menu.v2.h5 { transform-origin: 50% 0%; } /* bottom center */
+	.menu.v1.h5 { transform-origin: 50% 100%; } /* center top */
+	.menu.v2.h5 { transform-origin: 50% 0%; } /* center bottom */
+	
+	.menu.v5.h3 { transform-origin: 0% 50%; } /* left center */
+	.menu.v5.h4 { transform-origin: 100% 50%; } /* right center */
 	
 	.menu {
 		.content { opacity: 0; transition: opacity 0.15s ease-in-out; transition-delay: 0.1s; }
