dataview url and select cells

--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -1,3 +1,1 @@
-.block { 
-	border: 1px solid red; margin: 1px; padding: 1px 0px; word-break: break-word; 
-}
+.block { border: 1px solid red; margin: 1px; padding: 1px 0px; word-break: break-word; }
