--- a/src/scss/component/select.scss
+++ b/src/scss/component/select.scss
@@ -10,7 +10,7 @@
 	.icon { transition: none; }
 	.icon.arrow { 
 		margin: -3px 0px 0px 0px !important; right: 10px; width: 10px !important; height: 6px !important; position: absolute; top: 50%;
-		background-image: url('~img/icon/select.svg'); 
+		background-image: url('~img/arrow/select.svg'); 
 	}
 	.current { padding: 4px 26px 4px 8px; }
 	.options { 
