--- a/src/scss/menu/dataview/account.scss
+++ b/src/scss/menu/dataview/account.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuTag { width: 228px; }
-	.menu.menuTag {
+	.menu.menuDataviewAccount { width: 228px; }
+	.menu.menuDataviewAccount {
 		.form { padding: 0px 10px; }
 		.line { height: 1px; margin: 8px 0px; background: #dfddd0; }
 		.input { padding: 0px; font-size: 13px; height: 18px; }
