--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -46,6 +46,9 @@
 	width: 64px; height: 64px; border-radius: 100%; font-weight: 500; position: relative; overflow: hidden;
 	text-transform: uppercase; font-size: 22px; color: #fff; text-align: center; line-height: 62px;
 }
+.icon.user.c18 { width: 18px; height: 18px; line-height: 18px; font-size: 11px; }
+.icon.user.c40 { width: 40px; height: 40px; line-height: 40px; font-size: 18px; }
+
 .icon.user {
 	.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
 	.image { 
