--- a/src/scss/menu/dataview/calendar.scss
+++ b/src/scss/menu/dataview/calendar.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuCalendar { padding: 16px; width: 228px; }
-	.menu.menuCalendar {
+	.menu.menuDataviewCalendar { padding: 16px; width: 228px; }
+	.menu.menuDataviewCalendar {
 		.day { 
 			display: inline-block; vertical-align: top; width: 28px; height: 28px; text-align: center; font-size: 13px; line-height: 30px;
 			cursor: pointer; border-radius: 4px; letter-spacing: 0.1px;
