--- a/src/scss/menu/dataview/property.scss
+++ b/src/scss/menu/dataview/property.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuPropertyList { width: 224px; }
-	.menu.menuPropertyList {
+	.menu.menuDataviewPropertyList { width: 224px; }
+	.menu.menuDataviewPropertyList {
 		.item {
 			.icon.property { width: 16px; }
 			.icon.plus { width: 12px; height: 12px; background-image: url('~img/icon/block/dataview/plus/light0.svg'); }
@@ -11,8 +11,8 @@
 		.item.add { color: #aca996; }
 	}
 	
-	.menu.menuPropertyEdit { width: 208px; }
-	.menu.menuPropertyEdit {
+	.menu.menuDataviewPropertyEdit { width: 208px; }
+	.menu.menuDataviewPropertyEdit {
 		.wrap { padding: 8px 16px; }
 		.line { height: 1px; margin: 8px 0px; background: #dfddd0; }
 		.input { border: 1px solid #dfddd0; font-size: 13px; }
