--- a/src/scss/menu/dataview/sort.scss
+++ b/src/scss/menu/dataview/sort.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuFilter { width: 446px; }
-	.menu.menuFilter {
+	.menu.menuDataviewSort { width: 352px; }
+	.menu.menuDataviewSort {
 		.item { padding: 4px 16px; }
 		.item {
 			.icon.plus { width: 12px; height: 12px; background-image: url('~img/icon/block/dataview/plus/light0.svg'); }
