--- a/src/scss/menu/dataview/view.scss
+++ b/src/scss/menu/dataview/view.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuView { width: 208px; }
-	.menu.menuView {
+	.menu.menuDataviewView { width: 208px; }
+	.menu.menuDataviewView {
 		.item {
 			.icon.view { width: 14px; height: 12px; }
 			.icon.view.c0 { background-image: url('~img/icon/menu/view/grid.svg'); }
