--- a/src/scss/menu/dataview/property.scss
+++ b/src/scss/menu/dataview/property.scss
@@ -15,7 +15,7 @@
 	.menu.menuDataviewPropertyEdit {
 		.wrap { padding: 8px 16px; }
 		.line { height: 1px; margin: 8px 0px; background: #dfddd0; }
-		.input { border: 1px solid #dfddd0; font-size: 13px; }
+		.input { border: 1px solid #dfddd0; font-size: 13px; padding: 0px 8px; }
 		
 		.icon.arrow { 
 			width: 6px; height: 10px; position: absolute; right: 16px; top: 50%; margin: -5px 0px 0px 0px; 
